# skytools-legacy

./: .gitignore  AUTHORS  COPYRIGHT  INSTALL  Makefile  NEWS  README  autogen.sh  config.mak.in  configure.ac  setup.py  setup_pkgloader.py  setup_skytools.py  source.cfg
debian/: README.Debian  README.source  changelog  control  control.in  copyright  genpg.sh  packages.in  pg_buildext  pgversions  postgresql-8.3-pgq3.dirs  postgresql-8.3-pgq3.install  postgresql-8.4-pgq3.dirs  postgresql-8.4-pgq3.docs  postgresql-8.4-pgq3.install  postgresql-9.0-pgq3.dirs  postgresql-9.0-pgq3.install  postgresql-9.1-pgq3.dirs  postgresql-9.1-pgq3.install  postgresql-9.2-pgq3.dirs  postgresql-9.2-pgq3.install  postgresql-9.3-pgq3.dirs  postgresql-9.3-pgq3.install  postgresql-9.4-pgq3.dirs  postgresql-9.4-pgq3.install  python-pgq3.docs  python-pgq3.install  python-skytools3.docs  python-skytools3.install  rules  skytools.ini  skytools3-ticker.docs  skytools3-ticker.install  skytools3-ticker.manpages  skytools3-walmgr.docs  skytools3-walmgr.install  skytools3-walmgr.manpages  skytools3-walmgr.postinst  skytools3-walmgr.prerm  skytools3.dirs  (+7 more)
debian/source/: include-binaries
doc/: Makefile  TODO.txt  common.config.txt  common.logutriga.txt  common.switches.txt  config.txt  cube_dispatcher.txt  devnotes.txt  extra.css  faq.txt  index.txt  londiste.cmdline.txt  londiste.config.txt  londiste.ref.txt  londiste.txt  londiste3.txt  newadm.txt  overview.txt  pgq-admin.txt  pgq-nodupes.txt  pgq-sql.txt  pgqadm.txt  pgqd.txt  qadmin.txt  queue_mover.txt  queue_mover3.txt  queue_splitter.txt  queue_splitter3.txt  scriptmgr.txt  set.notes.txt  simple_consumer3.txt  simple_local_consumer3.txt  skytools3.txt  skytools_upgrade.txt  sql-grants.txt  table_dispatcher.txt  upgrade.txt  walmgr.txt  walmgr3.txt
doc/howto/: londiste3_cascaded_rep_howto.txt  londiste3_merge_howto.txt  londiste3_partitioning_howto.txt  londiste3_simple_rep_howto.txt  setup_walmgr_replication.txt
misc/: Cindent  bumpver.py  bumpver.sh  checkver.sh  docheck.sh  getattrs.py  kwcheck.py  lint.rc  pychecker.rc  pychecker.strict.rc  run.lint.sh  strip_ext.py
old/: bulk_loader.py  bulk_loader.txt  cube_dispatcher.py  simple_serial_consumer.py
python/: londiste.py  newadm.py  pgqadm.py  pkgloader.py  qadmin.py  setadm.py  walmgr.py
python/conf/: londiste.ini  pgqadm.ini  skylog.ini  wal-master.ini  wal-slave.ini
python/londiste/: __init__.py  bublin.py  compare.py  exec_attrs.py  file_read.py  file_write.py  handler.py  installer.py  playback.py  repair.py  setup.py  syncer.py  table_copy.py  util.py
python/modules/: cquoting.c  hashtext.c
python/pgq/: __init__.py  baseconsumer.py  consumer.py  coopconsumer.py  event.py  localconsumer.py  maint.py  producer.py  rawconsumer.py  remoteconsumer.py  setadmin.py  setconsumer.py  setinfo.py  status.py  ticker.py
python/skytools/: __init__.py  _pyquoting.py  adminscript.py  checker.py  config.py  dbservice.py  dbstruct.py  fileutil.py  gzlog.py  hashtext.py  installer_config.py.in  natsort.py  parsing.py  plpy_applyrow.py  psycopgwrapper.py  pyhashtext.py  querybuilder.py  quoting.py  scripting.py  skylog.py  sockutil.py  sqltools.py  stats.py  stats_carbon.py  timeutil.py  utf8.py
scripts/: bulk_loader.ini.templ  bulk_loader.py  catsql.py  cube_dispatcher.ini.templ  cube_dispatcher.py  data_maintainer.py  find_sql_functions.py  grantfu.py  queue_loader.ini  queue_loader.py  queue_mover.ini.templ  queue_mover.py  queue_splitter.ini.templ  queue_splitter.py  scriptmgr.ini.templ  scriptmgr.py  simple_consumer.py  simple_local_consumer.py  simple_serial_consumer.py  skytools_upgrade.py  table_dispatcher.ini.templ  table_dispatcher.py
sql/: Makefile  common-pgxs.mk  ztestall.sh
sql/conflicthandler/: Makefile  README  merge_on_time.sql
sql/dispatch/: Makefile  create_partition.sql
sql/logtriga/: Makefile  README.logtriga  logtriga.c  logtriga.sql.in  textbuf.c  textbuf.h
sql/londiste/: Makefile  README.londiste  londiste.control
sql/pgq/: Makefile  README.pgq  pgq.control  pgq_insert.c  pgq_insert.sql.in
sql/pgq_coop/: Makefile  pgq_coop.control
sql/pgq_ext/: Makefile  README.pgq_ext  pgq_ext.control
sql/pgq_node/: Makefile  pgq_node.control
sql/pgq_set/: Makefile
sql/ticker/: Makefile  connection.c  connection.h  maint.c  pgqd.c  pgqd.h  pgqd.ini  retry.c  ticker.c  util.c  util.h
sql/txid/: Makefile  README.txid  epoch.c  txid.c  txid.h  txid.internal.sql  txid.schema.sql  txid.std.sql  uninstall_txid.sql
tests/: env.sh  testlib.sh  zcheck.sh  zstop.sh
tests/cascade/: addcol.sql  footable.sql  init.sh  plainconsumer.py  plainworker.py  regen.sh  status.sh  ztest.sh
tests/handler/: init.sh  regen.sh
tests/localconsumer/: init.sh  regen.sh  testconsumer.py
tests/londiste/: Makefile  checkerr.sh  data.sql  ddl.sql  env.sh  gendb.sh  init.sh  loadgen.py  makenode.sh  regen.sh  run-tests.sh  stop.sh  test-compare.sh  test-fkey.sh  test-resurrect.sh  test-weird-merge.sh  testing.py  zstop.sh
tests/merge/: init.sh  regen.sh
tests/merge_all/: init.sh  regen.sh
tests/merge_qnode/: addcol-data2.sql  init.sh  overview.sh  regen.sh
tests/multimaster/: init.sh  regen.sh
tests/newloader/: send.data.sql  tables.sql
tests/noqueue_merge/: init.sh  regen.sh
tests/part/: init.sh  regen.sh
tests/qtable/: init.sh  regen.sh
tests/queue_loader/: init.sh  regen.sh  triggers.sql
tests/quoting/: Makefile  regtest.py
tests/rename/: regen.sh
tests/scripts/: data.sql  env.sh  gendb.sh  install.sql  run-tests.sh  stop.sh
tests/setadm/: gendb.sh  master.ini  stop.sh  test.ini  testconsumer.py
tests/simplecons/: regen.sh  schema.sql
tests/skylog/: logtest.py  runtest.sh  skylog.ini  test.ini
tests/upgrade/: gendb.sh  run-tests.sh
tests/walmgr/: run-test.sh
upgrade/: Makefile
upgrade/final/: londiste.2.1.12.sql  londiste.upgrade_2.1_to_3.1.sql  pgq.upgrade_2.1_to_3.0.sql  pgq_core_2.1.13.sql  v2.1.5_londiste.sql  v2.1.5_pgq_core.sql  v2.1.5_pgq_ext.sql  v2.1.6_londiste.sql  v2.1.6_pgq_ext.sql  v2.1.7_londiste.sql  v2.1.7_pgq_core.sql  (+2 more)
(+388 files in other folders)
